Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-09-16 (SVN):
    * oslibs: recompiled mac os x codec libraries.

2012-09-16 (SVN):
    * d_sprite.c (D_DrawSprite): fix (work around) bug #3562290: when
      R_SetupAndDrawSprite() sets pout->v to a value <= -1, ymin might
      become negative and that makes the screen pointer pz to point to
      an invalid address in D_SpriteDrawTransSpans(), thus leading to
      an access violation. this sometimes happens with sprites rendered
      very close to the camera origin such as the teleporter puff. we
      just return without drawing anything when ymin is negative, from
      now on.
    * updated version date stamp to 2012-09-16.

2012-09-16 (SVN):
    * updated a web link in the README file.

2012-09-16 (SVN):
    * h2patch, launcher/apply_patch: typo fixes.

2012-09-15 (SVN):
    * pr_edict.c: added compile time asserts so as to make sure that the
      globalvars structures have correct member offsets.

2012-09-15 (SVN):
    * updated version date stamp to 2012-09-15.

2012-09-15 (SVN):
    * added pakfile information for the ultra-ancient hw 0.09 version

2012-09-15 (SVN):
    * added progs information for the ultra-ancient hw 0.09 version

2012-09-15 (SVN):
    * hw/, siege/world.hc (GetNextMap): reverted r4945 (line 592) change

2012-09-15 (SVN):
    * updated release notes

2012-09-12 (SVN):
    * breakabl.hc, client.hc, doors.hc, subs.hc, weapons.hc, world.hc:
      replaced several while(1){} and do{}while(1) loops by loop{} which
      is shorter. hcc supports this feature, so let's just use it.

2012-09-12 (SVN):
    * hw/, siege/world.hc (GetNextMap): start searching strings.txt at
      line 592 (STR_GOTDEEPFREEZE), not at line 0. that particular line
      is present in hexenworld versions of strings.txt as standart.

2012-09-12 (SVN):
    * weapons.hc (CycleWeaponCommand,CycleWeaponReverseCommand): removed